--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -312,7 +312,7 @@ a:focus{
 
 		input{
 			border: 0px;
-			width: 60px !important;
+			width: 40px !important;
 			text-align: center;
 			height: 30px;
 			border-radius: 0;
@@ -626,7 +626,7 @@ body.body-memo{
 	z-index:99;
 
 	.jp-video{
-		width: 480px;
+		width: 320px;
 		background:transparent;
 		margin: 0 auto;
 	}
